log
Fri 05 May 2023 06:45:56 PM UTC: 
 tests:  0|5
total_score: 0/70
f4d477a
Fri 05 May 2023 06:59:08 PM UTC: 
 sudoku.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:60:25: error: ‘j’ undeclared (first use in this function)
   60 |           if(n->sudo[k][j] == 0)
      |                         ^
sudoku.c:60:25: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
04440bb
Fri 05 May 2023 06:59:15 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
ebbf5b5
Fri 05 May 2023 07:15:28 PM UTC: 
 sudoku.c | 25 +++++++++++++++++++++++++
 1 file changed, 25 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:50:11: error: unused variable ‘marcadosColumna’ [-Werror=unused-variable]
   50 |     int * marcadosColumna = calloc(10, sizeof(int));
      |           ^~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
bdff270
Fri 05 May 2023 07:15:52 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
716222c
Fri 05 May 2023 07:18:06 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
d3039d8
Fri 05 May 2023 07:19:45 PM UTC: 
 sudoku.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
928a7ee
Fri 05 May 2023 07:22:33 PM UTC: 
 sudoku.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
 tests:  5|3
total_score: 35/70
36d168b
